<resources>
    <string name="app_name">StrangersPlay</string>
    <string name="test">Test</string>
    <string name="level">Sought level:</string>
    <string name="price">Price:</string>
    <string name="exit">Exit</string>
    <string name="join">Join</string>
    <string name="localization">Localization:</string>
    <string name="date">Set date</string>
    <string name="calender">Event date</string>
    <string name="newest">Newest</string>
    <string name="football">Football</string>
    <string name="volleyball">Volleyball</string>
    <string name="basketball">Basketball</string>
    <string name="tennis">Tennis</string>
    <string name="other">Other</string>
    <string name="picture">picture</string>
    <string name="menu_title_categories">Categories</string>
    <string name="add">Add</string>
    <string name="choose_category">Choose category:</string>
    <string name="set_some_description">Set some description</string>
    <string name="title">Title</string>
    <string name="in_pln">in PLN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_about_TV">About:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="commnets_tv">Comments:</string>
    <string name="profile_menu_title">Profile</string>
    <string name="access_token">pk.eyJ1IjoiYnJ6ZXppbyIsImEiOiJjazJ1c3A2eDMxN3hhM2RudjZnZnd0dzMwIn0.7S7rFwT6CULR7me_2rF6Ow</string>
    <string name="sort_by">Sort by:</string>
    <string name="the_nearlest">The nearlest event</string>
    <string name="lower_price">From lower to higher price</string>
    <string name="higher_price">From higher to lower price</string>
    <string name="least_people">From less to more people</string>
    <string name="more_people">From more to less people</string>
    <string name="number_of_sought">Number of sought players</string>
    <string name="set_event_day">Set event day</string>
    <string name="set_event_hours">Set event hours</string>
    <string name="add_event">Add event</string>
    <string name="from_weaker_to_stronger_players">From weaker to stronger players</string>
    <string name="from_stronger_to_weaker_players">From stronger to weaker players</string>
    <string name="events_in_which_you_participate">Events in which you participate</string>
    <string name="give_some_feedback">Give some feedback</string>
    <string name="rate">Rate</string>
    <string name="joined_events">Joined events</string>
    <string name="opu">Opuść</string>
</resources>
