<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/newestEventFragment"
        android:icon="@drawable/ic_cloud_queue_black_24dp"
        android:title="@string/newest"/>

    <item android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_cloud_queue_black_24dp"
        android:title="@string/menu_title_categories"/>

    <item android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_alien_head"
        android:title="@string/profile_menu_title"/>

    <item android:id="@+id/newEventFragment"
        android:icon="@drawable/ic_add_event"
        android:title="@string/add_event"/>

    <item
        android:id="@+id/joinedEventFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/joined_events" />


</menu>