<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newEventFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryDarkColor"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:ellipsize="end"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/secondaryLightColor"
            android:textSize="30dp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ratingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/level"
                android:textColor="@color/secondaryLightColor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/levelSpinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/choose_category"
                android:textColor="@color/secondaryLightColor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/secondaryLightColor"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/set_some_description"
            android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
            tools:ignore="ExtraText" />

        <TextView
            android:id="@+id/localizationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/localization"
            android:textColor="@color/secondaryLightColor"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/price"
                android:textAlignment="textStart"
                android:textColor="@color/secondaryLightColor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:hint="@string/in_pln"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/secondaryLightColor"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/userLimitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/number_of_sought"
                android:textAlignment="textStart"
                android:textColor="@color/secondaryLightColor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/secondaryLightColor"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventTimeHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="9"
                android:editable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:inputType="text"
                android:maxLines="1"
                android:text="@string/set_event_hours"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/eventTimeDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="9"
                android:editable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:inputType="text"
                android:maxLines="1"
                android:text="@string/set_event_day"
                android:textAlignment="textStart" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/exitButton"
                style="@style/button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/exit" />

            <Button
                android:id="@+id/createEventButton"
                style="@style/button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/add" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
